Make sure images are blurred on flagged posts

--- a/apps/web/src/components/PostCard/PostCard.module.scss
+++ b/apps/web/src/components/PostCard/PostCard.module.scss
@@ -136,3 +136,12 @@
     border-top: 5px solid $color-requests;
   }
 }
+
+.flagged {
+
+  img {
+    filter: blur(30px);
+  }
+
+  overflow: hidden;
+}
